Added delete comment
